# sparam-analysis-tool

./: .gitignore  README.md  pyproject.toml  sparam_tool.spec
.github/workflows/: windows-release.yml
app/: main.py
app/analysis/: deembedding.py  metrics.py  mixed_mode.py  sparam_loader.py  tdr.py
app/models/: __init__.py  loaded_dataset.py
app/plots/: __init__.py  mpl_canvas.py
app/services/: update_checker.py
app/ui/: main_window.py  main_window_v2.py
app/ui/widgets/: collapsible_section.py  file_list_widget.py  marker_readout.py
tests/: test_metrics.py  test_mixed_mode.py
